VSE Preview breaks when using Metastrips, the new Transform tools, and proxies #85970

Closed
opened 2021-02-24 23:42:40 +01:00 by Zeger Knaepen · 5 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-23 19:27, hash: 6844b768f3

Short description of error
When using the new Transform tools (Scale X and Scale Y more specifically) on a MetaStrip in the VSE, the preview is wrong when Proxy Render is active.

Exact steps for others to reproduce the error

  • Create a new file using the Video Editing template, make sure it's set to 1920x1080
  • Add a 4K video file to the timeline, activate "Strip Proxy & Timecode" and make sure 25% is selected.
  • Click on "Rebuild Proxy and Timecode Indices"
  • In the Preview window, make sure "Proxy Render" is set to "Proxy size 25%"
  • Open Transform in the Strip tab, Scale X and Scale Y should both be 0.5
  • With the video strip selected, press ctrl+G to turn it into a MetaStrip. Scale X and Scale Y of this MetaStrip are both 1.0
  • Change either (or both) Scale X and Scale Y to 1.1, which should enlarge the view, but the preview suddenly changes to a much smaller view.
  • Change "Proxy Render" in the Preview window to "No proxy, full render", the preview again fills the entire frame, as it should.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-23 19:27, hash: `6844b768f3` **Short description of error** When using the new Transform tools (Scale X and Scale Y more specifically) on a MetaStrip in the VSE, the preview is wrong when Proxy Render is active. **Exact steps for others to reproduce the error** - Create a new file using the Video Editing template, make sure it's set to 1920x1080 - Add a 4K video file to the timeline, activate "Strip Proxy & Timecode" and make sure 25% is selected. - Click on "Rebuild Proxy and Timecode Indices" - In the Preview window, make sure "Proxy Render" is set to "Proxy size 25%" - Open Transform in the Strip tab, Scale X and Scale Y should both be 0.5 - With the video strip selected, press ctrl+G to turn it into a MetaStrip. Scale X and Scale Y of this MetaStrip are both 1.0 - Change either (or both) Scale X and Scale Y to 1.1, which should enlarge the view, but the preview suddenly changes to a much smaller view. - Change "Proxy Render" in the Preview window to "No proxy, full render", the preview again fills the entire frame, as it should.
Author

Added subscriber: @Gaeriel

Added subscriber: @Gaeriel

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by 3059c0b386

This issue was referenced by 3059c0b386d3eedbbaaecb4489ff70d61348e2bf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-03-02 12:23:44 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85970
No description provided.