Fix T85970: Incorrect scaling of meta strips

This is same issue as fixed by d85789255320, but I forgot to check meta
strips. Meta strip output is always in render size.

Reviewed By: sergey

Differential Revision: https://developer.blender.org/D10560